--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -92,8 +92,7 @@
   font-family: 'Roboto';
   color: white;
   border: none;
-  padding-top: 12px;
-  padding-bottom: 12px;
+  padding: 0.7rem 1rem;
   border-radius: 6px;
   background-color: #0967d2;
   margin-top: 20px;
